--- a/application/config/settings.yaml
+++ b/application/config/settings.yaml
@@ -3,5 +3,7 @@ default:
 development:
     SQLALCHEMY_DATABASE_URI: mysql+pymysql://root:localhost123@localhost:3306/pyfly
     JWT_SECRET_KEY: changeme
+    LOGGER:
+        LEVEL: DEBUG
 production:
     SQLALCHEMY_DATABASE_URI: postgresql://...
