--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ flask-restful = "^0.3.10"
 flask-migrate = "^4.0.4"
 marshmallow-sqlalchemy = "^0.29.0"
 flask-loguru = "^1.0.0"
+python-consul = "^1.1.0"
 
 
 [build-system]
