--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,16 @@ marshmallow-sqlalchemy = "^0.29.0"
 flask-loguru = "^1.0.0"
 python-consul = "^1.1.0"
 
+[tool.poetry.group.dev.dependencies]
+pylint = "^2.17.4"
+isort = "^5.12.0"
+pytest = "^7.3.1"
+tox = "^4.5.2"
+mkdocs = "^1.4.3"
+mkdocs-material = "^8.5.11"
+pytest-pylint = "^0.19.0"
+pre-commit = "^3.3.2"
+autopep8 = "^2.0.2"
 
 [build-system]
 requires = ["poetry-core"]
