--- a/tox.ini
+++ b/tox.ini
@@ -1,44 +1,34 @@
-[flake8]
-max-line-length = 120
-
 [tox]
+isolated_build = True
+indexserver =
+    default = https://pypi.tuna.tsinghua.edu.cn/simple
 envlist =
-  py{38,37,36}
-  tests
-  black
+    py311
+    isort
+    pylint
+
+[testenv:isort]
+deps =
+    isort
+changedir = {toxinidir}
+commands =
+    isort . --check-only --diff
 
 [testenv]
-
-deps=
-  flake8
-  pytest
-  pytest-flask
-  pytest-runner
-  pytest-factoryboy
-  pytest-celery
-  factory_boy
-  -r requirements.txt
-  black
-setenv =
-       DATABASE_URI = sqlite:///:memory:
-       SECRET_KEY = testing
-       FLASK_ENV = development
-       CELERY_BROKER_URL = {env:CELERY_BROKER_URL:amqp://guest:guest@localhost/}
-       CELERY_RESULT_BACKEND_URL = {env:CELERY_RESULT_BACKEND_URL:rpc://}
-
-commands=
-  flake8 app
-  black app --check
-  pytest tests
-
-
-[testenv:test]
-commands=
-  pytest tests {posargs}
-
-
-[testenv:lint]
-skip_install = true
+deps =
+    poetry
 commands =
-  flake8 app
-  black app --diff --check
+    poetry install -v
+
+[testenv:pylint]
+changedir = {toxinidir}
+commands =
+    poetry install -v
+    poetry run pylint application --ignore=migration
+
+[testenv:coverage]
+deps =
+    poetry
+    coverage
+commands =
+    poetry run coverage report --rcfile=tox.ini --fail-under=50
