--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ commands =
 changedir = {toxinidir}
 commands =
     poetry install -v
-    poetry run pylint application --ignore=migration
+    poetry run pylint application --ignore=migrations
 
 [testenv:coverage]
 deps =
