--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ deps =
     poetry
 commands =
     poetry install -v
+    poetry run pytest tests --disable-warnings
 
 [testenv:pylint]
 changedir = {toxinidir}
